@@ -77,6 +77,7 @@ CAY-1829 Make ResultIterator implement Iterable<T>, create ObjectContext.iterate
 CAY-1836 Firebird Adapter 
 CAY-1838 Deprecate EntityResolver.indexedByClassProperty
 CAY-1840 Conditionally log slow / long-running queries
+CAY-1844 Configuration for maximum time to wait for an available DB connection
 
 Bug Fixes:
 
